chore(docker): provide side-by-side Dockerfiles for now